# gigastt

./: .dockerignore  .gitignore  AGENTS.md  ANDROID.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cuda  README.md  README_RU.md  SECURITY.md  deny.toml
.cargo/: audit.toml
.github/workflows/: android.yml  ci.yml  homebrew.yml  release.yml  soak.yml
.omx/: metrics.json
.omx/logs/: notify-fallback-2026-04-13.jsonl  omx-2026-04-13.jsonl  session-history.jsonl
.omx/state/: notify-fallback-authority-owner.json  notify-fallback-state.json  notify-fallback.pid  session.json  update-check.json
.omx/state/sessions/omx-1776067263879-vbv20z/: hud-state.json
.omx/state/sessions/omx-1776067324327-ylahqx/: AGENTS.md  hud-state.json
.omx/state/tmux-extended-keys/: private-tmp-tmux-501-default.json
Formula/: gigastt.rb
crates/gigastt/: Cargo.toml
crates/gigastt-core/: Cargo.toml  README.md
crates/gigastt-core/src/: error.rs  lib.rs
crates/gigastt-core/src/inference/: audio.rs  decode.rs  features.rs  mod.rs  tokenizer.rs
crates/gigastt-core/src/model/: mod.rs
crates/gigastt-core/src/protocol/: mod.rs
crates/gigastt-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/gigastt-ffi/include/: gigastt.h
crates/gigastt-ffi/src/: lib.rs
crates/gigastt-ffi/tests/: ffi_smoke.py
crates/gigastt/src/: lib.rs  main.rs
crates/gigastt/src/server/: http.rs  metrics.rs  mod.rs  rate_limit.rs  ws.rs
crates/gigastt/tests/: e2e_shutdown.rs  e2e_ws.rs  soak_test.rs
crates/gigastt/tests/common/: mod.rs
docs/: asyncapi.yaml  cli.md  deployment.md  openapi.yaml  privacy.md  verifying-releases.md
docs/observability/: alerts.yml  dashboard.json
docs/superpowers/plans/: 2026-05-07-quality-improvements.md
docs/superpowers/specs/: 2026-05-05-polyvoice-crates-io-migration-design.md  2026-05-07-quality-improvements-design.md  2026-05-07-readme-competitive-design.md  2026-05-07-workspace-split-design.md
examples/: KotlinClient.kt  bun_client.ts  go_client.go  js_client.mjs  python_client.py  transcribe_file.rs  websocket_client.rs
ffi/android/: GigasttBridge.kt
scripts/: quantize.py
specs/: plan.md  prod-readiness-v1.0.md  todo.md
src/: ffi.rs  lib.rs  main.rs  quantize.rs
src/inference/: audio.rs  decode.rs  diarization.rs  features.rs  mod.rs  tokenizer.rs
src/model/: mod.rs
src/protocol/: mod.rs
src/server/: config.rs  http.rs  metrics.rs  middleware.rs  mod.rs  rate_limit.rs  ws.rs
tests/: benchmark.rs  e2e_errors.rs  e2e_rate_limit.rs  e2e_rest.rs  e2e_shutdown.rs  e2e_ws.rs  ffi_smoke.py  load_test.rs  server_integration.rs  soak_test.rs
tests/common/: mod.rs
