[workspace]
members = ["crates/gigastt-core", "crates/gigastt-ffi", "crates/gigastt"]
default-members = ["crates/gigastt"]
resolver = "3"

[workspace.package]
version = "2.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/ekhodzitsky/gigastt"

[profile.release]
lto = true
codegen-units = 1
strip = true
